--- a/docs/style.css
+++ b/docs/style.css
@@ -77,6 +77,41 @@ h4{
   margin-right: auto;
 }
 
+.testing-protocol {
+  width: 40%;
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.testing-protocol h2 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.testing-protocol p {
+  color: #555;
+  font-size: 16px;
+  margin: 5px 0;
+}
+
+.testing-protocol p strong {
+  color: #000;
+}
+
+.heuristic-evaluation {
+  width: 40%;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
 /*ANIMATION*/
 .animation-ctn{
   text-align:center;
