--- a/docs/style.css
+++ b/docs/style.css
@@ -20,10 +20,6 @@ body {
   margin: 0;
 }
 
-h1 {
-  margin-left: 2.5%;
-}
-
 h2 {
   text-align: center;
   font-size: 48px;
@@ -201,4 +197,52 @@ summary h3 {
 
 .anim-logo{
   animation: fadeIn 1.5s ease-in-out;
+}
+
+/*LINKS*/
+/* From Uiverse.io by Pradeepsaranbishnoi */ 
+.social-links,.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-btn {
+  cursor: pointer;
+  height: 50px;
+  width: 50px;
+  font-family: 'Titillium Web', sans-serif;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  background: white;
+  margin: 5px;
+  transition: 0.3s;
+  justify-content: center;
+  fill: #333;
+  text-decoration: none;
+}
+
+.social-btn svg {
+  height: 24px;
+  width: 24px;
+}
+
+.social-btn span {
+  width: 0px;
+  overflow: hidden;
+  transition: 0.3s;
+  text-align: center;
+  margin-left: 5px;
+  color: #333;
+}
+
+.social-btn:hover {
+  width: 150px;
+  border-radius: 5px;
+}
+
+.social-btn:hover span {
+  padding: 2px;
+  width: 80px;
 }
