--- a/docs/style.css
+++ b/docs/style.css
@@ -108,7 +108,6 @@ summary {
 }
 
 summary h3 {
-  margin: 0;
   flex-grow: 1;
 }
 
@@ -121,6 +120,12 @@ summary h3 {
   transition: max-height 0.5s ease-out, padding 0.5s ease-out;
   max-height: auto;
   padding: 0 20px;
+}
+
+.collapsible:not([open]):hover {
+  border-color: #888;
+  background-color: #f1f1f131;
+  transition: background-color 0.1s ease-out;
 }
 
 .collapsible[open] {
