--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+@media only screen and (max-width: 600px) {
+  body {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  body {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  body {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+}
+
 *{
   font-family: "Outfit", Arial, Helvetica, sans-serif;
   color: white;
@@ -17,7 +38,6 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  margin: 0;
 }
 
 h2 {
@@ -27,16 +47,26 @@ h2 {
 
 h3 {
   text-align: center;
-  font-size: 28px;
+  font-size: 38px;
 }
 
 h4 {
   text-align: center;
-  font-size: 18px;
+  font-size: 24px;
 }
 
 #userflow {
   display: flex;
+}
+
+.section-outline{
+  border-radius: 15px;
+  border-width: 2px;
+  border-color: #f9f9f9;
+  border-style: solid;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  width: 100%;
 }
 
 .designs {
@@ -46,10 +76,12 @@ h4 {
 }
 
 .designs>img {
-  width: 20%;
+  min-width: 10rem;
+  max-width: 22rem;
   height: auto;
-  margin: 0 1em;
+  margin: 1rem;
   border-radius: 25px;
+  flex-basis: 3;
 }
 
 .text-center {
@@ -74,7 +106,7 @@ h4 {
   margin-right: auto;
 }
 
-.testing-protocol {
+.card {
   width: 80%;
   margin: 20px;
   margin-left: auto;
@@ -85,19 +117,21 @@ h4 {
   background-color: #f9f9f9;
 }
 
-.testing-protocol h2 {
+.card h2,.card h3,.card h4 {
   color: #333;
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: start;
 }
 
-.testing-protocol p {
+.card p {
   color: #555;
   font-size: 16px;
   margin: 5px 0;
 }
 
-.testing-protocol p strong {
+.card p strong {
   color: #000;
 }
 
@@ -124,7 +158,7 @@ summary h3 {
 
 .collapsible:not([open]):hover {
   border-color: #888;
-  background-color: #f1f1f131;
+  background-color: #D9D9D9;
   transition: background-color 0.1s ease-out;
 }
 
