--- a/docs/style.css
+++ b/docs/style.css
@@ -85,7 +85,6 @@ h4 {
 }
 
 .text-center {
-  text-align: center;
   font-size: 18px;
   margin-left: 10%;
   margin-right: 10%;
@@ -94,8 +93,10 @@ h4 {
 
 .list {
   list-style-type: none;
-  text-align: center;
-  padding: 0;
+  text-align: justify;
+  margin-left: 10%;
+  margin-right: 10%;
+  justify-self: center;
 }
 
 .calendar-icon {
@@ -173,13 +174,16 @@ summary h3 {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .graphs>img{
-  width: 40%;
+  min-width: 10rem;
+  max-width: 35rem;
   height: auto;
-  margin: 0 1em;
+  margin: 1rem;
   border-radius: 25px;
+  flex-basis: 2;
 }
 
 .database{
