--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+@media only screen and (max-width: 600px) {
+  body {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  body {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  body {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+}
+
 *{
   font-family: "Outfit", Arial, Helvetica, sans-serif;
   color: white;
@@ -17,11 +38,6 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  margin: 0;
-}
-
-h1 {
-  margin-left: 2.5%;
 }
 
 h2 {
@@ -31,16 +47,26 @@ h2 {
 
 h3 {
   text-align: center;
-  font-size: 28px;
+  font-size: 38px;
 }
 
 h4 {
   text-align: center;
-  font-size: 18px;
+  font-size: 24px;
 }
 
 #userflow {
   display: flex;
+}
+
+.section-outline{
+  border-radius: 15px;
+  border-width: 2px;
+  border-color: #f9f9f9;
+  border-style: solid;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  width: 100%;
 }
 
 .designs {
@@ -50,14 +76,15 @@ h4 {
 }
 
 .designs>img {
-  width: 20%;
+  min-width: 10rem;
+  max-width: 22rem;
   height: auto;
-  margin: 0 1em;
+  margin: 1rem;
   border-radius: 25px;
+  flex-basis: 3;
 }
 
 .text-center {
-  text-align: center;
   font-size: 18px;
   margin-left: 10%;
   margin-right: 10%;
@@ -66,8 +93,10 @@ h4 {
 
 .list {
   list-style-type: none;
-  text-align: center;
-  padding: 0;
+  text-align: justify;
+  margin-left: 10%;
+  margin-right: 10%;
+  justify-self: center;
 }
 
 .calendar-icon {
@@ -78,7 +107,7 @@ h4 {
   margin-right: auto;
 }
 
-.testing-protocol {
+.card {
   width: 80%;
   margin: 20px;
   margin-left: auto;
@@ -89,19 +118,21 @@ h4 {
   background-color: #f9f9f9;
 }
 
-.testing-protocol h2 {
+.card h2,.card h3,.card h4 {
   color: #333;
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: start;
 }
 
-.testing-protocol p {
+.card p {
   color: #555;
   font-size: 16px;
   margin: 5px 0;
 }
 
-.testing-protocol p strong {
+.card p strong {
   color: #000;
 }
 
@@ -112,7 +143,6 @@ summary {
 }
 
 summary h3 {
-  margin: 0;
   flex-grow: 1;
 }
 
@@ -127,6 +157,12 @@ summary h3 {
   padding: 0 20px;
 }
 
+.collapsible:not([open]):hover {
+  border-color: #888;
+  background-color: #D9D9D9;
+  transition: background-color 0.1s ease-out;
+}
+
 .collapsible[open] {
   height: auto;
   padding: 20px;
@@ -138,13 +174,16 @@ summary h3 {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .graphs>img{
-  width: 40%;
+  min-width: 10rem;
+  max-width: 35rem;
   height: auto;
-  margin: 0 1em;
+  margin: 1rem;
   border-radius: 25px;
+  flex-basis: 2;
 }
 
 .database{
@@ -201,4 +240,52 @@ summary h3 {
 
 .anim-logo{
   animation: fadeIn 1.5s ease-in-out;
+}
+
+/*LINKS*/
+/* From Uiverse.io by Pradeepsaranbishnoi */ 
+.social-links,.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-btn {
+  cursor: pointer;
+  height: 50px;
+  width: 50px;
+  font-family: 'Titillium Web', sans-serif;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  background: white;
+  margin: 5px;
+  transition: 0.3s;
+  justify-content: center;
+  fill: #333;
+  text-decoration: none;
+}
+
+.social-btn svg {
+  height: 24px;
+  width: 24px;
+}
+
+.social-btn span {
+  width: 0px;
+  overflow: hidden;
+  transition: 0.3s;
+  text-align: center;
+  margin-left: 5px;
+  color: #333;
+}
+
+.social-btn:hover {
+  width: 150px;
+  border-radius: 5px;
+}
+
+.social-btn:hover span {
+  padding: 2px;
+  width: 80px;
 }
