--- a/docs/style.css
+++ b/docs/style.css
@@ -63,10 +63,15 @@ h4 {
   border-radius: 15px;
   border-width: 2px;
   border-color: #f9f9f9;
+  background-color: #f9f9f9;
   border-style: solid;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   width: 100%;
+}
+
+.section-outline h2, .section-outline h3, .section-outline h4, .section-outline p, .section-outline li, .section-outline a, .section-outline strong {
+  color: #000;
 }
 
 .designs {
@@ -82,6 +87,10 @@ h4 {
   margin: 1rem;
   border-radius: 25px;
   flex-basis: 3;
+}
+
+#notification {
+  max-height: 12rem;
 }
 
 .text-center {
@@ -150,11 +159,15 @@ summary h3 {
   width: 80%;
   margin: 20px auto;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 15px;
   overflow: hidden;
   transition: max-height 0.5s ease-out, padding 0.5s ease-out;
   max-height: auto;
   padding: 0 20px;
+}
+
+#heuristic-evaluation {
+  width: 95%;
 }
 
 .collapsible:not([open]):hover {
